# llm-inference-observability

./: Dockerfile  README.md  pyproject.toml
configs/: sweep.yaml
docs/: amd-rocm-case-study.md
results/: inference_20260311_232613.csv  inference_gpu_20260311_232613.csv  mi300x-vf-qwen3-32b-rocm641.md  sample_run.jsonl
src/infer_harness/: cli.py  synthetic.py  torch_runner.py
tests/: test_synthetic.py
